# esp32-wifi-camera

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.local.example
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
main/core/: frame_buffer.hpp  streaming_service.hpp  web_server.hpp  wifi_manager.hpp
main/drivers/: esp_camera_driver.hpp  esp_clock_driver.hpp
main/interfaces/: i_camera.hpp  i_clock.hpp
test/: test_frame_buffer.cpp  test_streaming_service.cpp
test/mocks/: mock_camera.hpp  mock_clock.hpp
